# auto-perception

./: .gitignore  README.md
src/: .gitignore
src/calibration_publisher/: CMakeLists.txt
src/calibration_publisher/launch/: calibration_publisher.launch
src/common/map_file/: CMakeLists.txt
src/common/op_planner/: CMakeLists.txt
src/common/op_ros_helpers/: CMakeLists.txt
src/common/op_simu/: CMakeLists.txt
src/common/op_utility/: CMakeLists.txt
src/common/vector_map/: CMakeLists.txt
src/common/vector_map_server/: CMakeLists.txt
src/fusion_detect/: CMakeLists.txt  package.xml
src/fusion_detect/launch/: fusion_detect.launch  my_detection.launch
src/fusion_detect/param/: camera_lidar_kitti_05.yaml  camera_lidar_sim_sf.yaml
src/fusion_detect/rviz_cfg/: kitti.rviz
src/fusion_detect/src/: fusion_detect.cpp
src/lanelet2_extension/: CMakeLists.txt
src/libwaypoint_follower/: CMakeLists.txt
src/lidar_euclidean_cluster_detect/: CMakeLists.txt
src/lidar_euclidean_cluster_detect/config/: params.yaml
src/lidar_euclidean_cluster_detect/launch/: euclidean_clustering_Exp.launch  lidar_euclidean_cluster_detect.launch
src/lidar_kf_contour_track/: CMakeLists.txt
src/lidar_kf_contour_track/launch/: lidar_kf_contour_track.launch
src/lidar_point_pillars/: CMakeLists copy.txt  CMakeLists.txt
src/lidar_point_pillars/launch/: lidar_point_pillars.launch
src/lidar_point_pillars/nodes/: point_pillars_ros.cpp
src/lidar_shape_estimation/: CMakeLists.txt
src/range_vision_fusion/: CMakeLists.txt
src/vision_darknet_detect/: CMakeLists.txt
(+7 files in other folders)
